[package]
name = "group-chat"
version = "0.1.0"
authors = ["CympleTech <contact@cympletech.com>"]
edition = "2018"
license = "MIT/Apache-2.0"

[workspace]
members = [
    "types",
]

[dependencies]
log = "0.4"
rand = "0.8"
simplelog = "0.8"
image = "0.23"
blake3 = "0.3"
aes-gcm = "0.8"
async-lock = "2.3"
async-channel = "1.4"
async-fs = "1.5"
serde = { version = "1", features = ["derive"] }
postcard = { version = "0.5", default-features = false, features = ["alloc"] }
sysinfo = "0.16"
tdn = { version = "0.4", default-features = false, features = ["full"] }
tdn_did = { git = "https://github.com/cypherlink/tdn-did", branch="main" }
tdn_storage = { git = "https://github.com/cypherlink/tdn-storage", branch="main" }
group-chat_types = { version = "0.1", path = "./types" }
sqlx = { version = "0.5", features = [ "runtime-async-std-native-tls", "postgres" ] }
once_cell = "1.7"
config = "0.11"
dotenv = "0.15"
hex = "0.4"
