[package]
name = "dao"
version = "0.1.0"
authors = ["CympleTech <dev@cympletech.com>"]
edition = "2021"
readme = "README.md"
description = "ESSE DAO service."
repository = "https://github.com/cympletech/DAO"
keywords = ["distributed", "p2p", "DAO"]
license = "MIT/Apache-2.0"

[dependencies]
aes-gcm = "0.9"
anyhow = "1.0"
bincode = "1.3"
blake3 = "1.3"
dotenv = "0.15"
hex = "0.4"
once_cell = "1.10"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls", "postgres" ] }
tdn = { version = "0.8", default-features = false, features = ["std"] }
tdn_did = { version = "0.8" }
tdn_storage = { git = "https://github.com/cympletech/tdn", branch="main" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

dao_types = { git = "https://github.com/cympletech/esse", branch="main" }

# DEBUG patch.
[patch.crates-io]
chamomile = { git = "https://github.com/cympletech/chamomile" }
chamomile_types = { git = "https://github.com/cympletech/chamomile" }
tdn = { git = "https://github.com/cympletech/tdn" }
tdn_types = { git = "https://github.com/cympletech/tdn" }
tdn_did = { git = "https://github.com/cympletech/tdn" }
